# bcat

./: CMakeLists.txt  LICENSE  README.md  bcat.c  test.c
btran/: CMakeLists.txt  alloc.c  alloc.h  btran.c  btran.h  circular_buffer.c  circular_buffer.h  icmp.c  icmp.h  ikcp.c  ikcp.h  ll.c  ll.h  log.c  log.h  queue.c  queue.h  reldgram.c  reldgram.h  salsa20.c  salsa20.h  sha256.c  sha256.h  tcp.c  tcp.h  udp.c  udp.h
licenses/: ikcp.license  salsa20.license  sha256.license
